--- a/index.html
+++ b/index.html
@@ -1,65 +1,71 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="fr">
 
 <head>
+	<meta charset="UTF-8">
+	<title>Casino game - Javascript</title>
+	<link rel="icon" href="favicon.ico">
+	<!--Import Google Icon Font-->
+	<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<!--Import materialize.css-->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
+	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
 
-    <title>Truth or Dare</title>
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-sweetalert/1.0.1/sweetalert.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css" />
-    <link rel="stylesheet" href="./css/main.css">
-
+	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css"
+		type="text/css">
+	<link rel="stylesheet" href="assets/css/style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
 <body>
-    <div class="banner">
-        <div class="banner-inner">
-            <div class="td-inner">
-                <div class="banner-bg"></div>
-                <div class="rotate-text">
-                    <h2>ROCK YOUR PROFITS</h2>
-                    <div class="rotate-line">
-                        <span class="rotate-btn" onclick="rotate()">SPIN NOW</span>
-                        to receive your TRUTH or DARE.
-                    </div>
+	<div class="corner-ribbon top-left sticky black shadow">
+		<span class="neon">Luxury</span> <span class="flux">Casino</span>
+	</div>
+	<audio id="current">
+		<audio id="spin" src="assets/audio/snip.mp3">
+		</audio>
+		<audio id="lose" src="assets/audio/lose.mp3">
+		</audio>
+		<audio id="win" src="assets/audio/win.mp3">
+		</audio>
+	</audio>
 
-                    <div class="wheel-box">
-                        <div class="wheel">
-                            <img src="img/wheel.png">
-                            <div class="bottle" onclick="rotate()"><img src="img/bottle.png"></div>
-                            <div class="coin p1"><img src="img/coin.png"></div>
-                            <div class="coin p2"><img src="img/coin.png"></div>
-                            <div class="coin p3"><img src="img/coin.png"></div>
-                            <div class="coin p4"><img src="img/coin.png"></div>
-                            <div class="coin p5"><img src="img/coin.png"></div>
-                            <div class="coin p6"><img src="img/coin.png"></div>
-                            <div class="coin p7"><img src="img/coin.png"></div>
-                            <div class="coin p8"><img src="img/coin.png"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+	<main>
+		<div>
+			<img class="logo pulse" src="assets/images/casino.png" alt="">
+		</div>
+		<div class="card">
+			<ul class="tabs">
+				<li class="tab col s3"><a class="active" href="#main">Game play</a></li>
+				<li class="tab col s3"><a href="#options">Options</a></li>
+			</ul>
+			<br>
+			<div id="main">
+				<div class="row">
+					<div class="col s12 items">
+						<img class="slot full slot1" src="assets/images/0.png">
+						<img class="slot full slot2" src="assets/images/1.png">
+						<img class="slot full slot3" src="assets/images/2.png">
+						<img class="slot full slot4" src="assets/images/3.png">
+					</div>
 
+				</div>
+				<button id="control" class="btn blue">Play</button>
+			</div>
+			<div id="options">
+				<span class="labels">Volume</span> <br>
+				<i class="material-icons dp48" id="change">volume_up</i><input style="width: 75%;" type="range"
+					onchange="setVolume(); " id='vol' min=0 max=1 step=0.01 value='1'>
+				<br>
+			</div>
+		</div>
+	</main>
 
-    <div class="td-resto">
-        <div class="td-resto-inner">
-            After you "tell your truth" or "do your dare",<br>download your free <span class="link">Truth or Dare
-                template</span> to double your profits and fun!</div>
-
-        <div class="td-resto-button">
-            <a target="_blank" href="https://masterpeacecoaching.com/truthordaretemplate/">
-                <div class="link-btn">DOWNLOAD NOW</div>
-            </a>
-        </div>
-    </div>
-    <input type="hidden" id="memory" value="">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script type="text/javascript" src="assets/js/main.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
 </body>
-
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-<script src="./js/main.js"></script>
 
 </html>
